--- a/frontend/src/Css/EditarInfoMongoDB.css
+++ b/frontend/src/Css/EditarInfoMongoDB.css
@@ -5,8 +5,8 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: rgba(0,0,0,0.5);
+  align-items: flex-start;
+  background-color: rgba(0,0,0,0.8);
   position: fixed;
   z-index: 1000;
 }
@@ -20,11 +20,18 @@
 }
 
 .modalMain {
-  height: 600px;
+  margin: 8% 0px 8% 0px;
   width: 90%;
   max-width: 800px;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   background: rgb(0, 24, 46);
   border-radius: 5px;
   position: relative;
+}
+.contBtnCerrarModal {
+  display: flex;
+  justify-content: flex-end;
 }
