--- a/frontend/src/Css/JuegosRNDcss/JRDeletrear.css
+++ b/frontend/src/Css/JuegosRNDcss/JRDeletrear.css
@@ -23,6 +23,16 @@
   text-align: center;
   font-size: 30px;
   color: rgb(0, 255, 179);
+  line-height: 30px;
+}
+.contBtnIniciar {
+  margin: 10px 0px 0px 0px;
+  display: flex;
+  justify-content: center;
+}
+.btnIniciar {
+  height: 50px;
+  width: 100px;
 }
 .deleContListPalabras {
   margin: 10px 0px 0px 0px;
