--- a/frontend/src/Css/JuegosRNDcss/JuegosRND.css
+++ b/frontend/src/Css/JuegosRNDcss/JuegosRND.css
@@ -35,7 +35,8 @@
   align-items: center;
 }
 .txtPuntos {
-  font-size: 40px;
+  font-size: 36px;
+  font-weight: bold;
   color: rgb(0, 255, 179);
 }
 .btnReiniciarJR {
